--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,10 +17,12 @@
 @keyframes title-slidein {
     0% {
         opacity: 0;
+		visibility: hidden;
         transform: translateY(15px);
     }
     100% {
         opacity: 1;
+		visibility: visible;
         transform: translateY(0);
     }
 }
@@ -28,10 +30,12 @@
 @keyframes p-slidein {
     0% {
         opacity: 0;
+		visibility: hidden;
         transform: translateY(10px);
     }
     100% {
         opacity: 1;
+		visibility: visible;
         transform: translateY(0);
     }
 }
@@ -39,10 +43,12 @@
 @keyframes left-slidein {
     0% {
         opacity: 0;
+		visibility: hidden;
         transform: translateX(-15px);
     }
     100% {
         opacity: 1;
+		visibility: visible;
         transform: translateX(0);
     }
 }
@@ -50,9 +56,11 @@
 @keyframes fadein {
     0% {
         opacity: 0;
+		visibility: hidden;
     }
     100% {
         opacity: 1;
+		visibility: visible;
     }
 }
 
@@ -120,6 +128,7 @@
 @keyframes contact-fadein {
     0% {
         opacity: 0;
+		visibility: hidden;
         transform: translateX(5px);
     }
     35% {
@@ -128,6 +137,7 @@
     }
     100% {
         opacity: 1;
+		visibility: visible;
         transform: translateY(0);
     }
 }
